// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLine() 1`] = `
"
checkexisting
  checkwhitespace
check-hyphen
"
`;

exports[`withLine() 2`] = `
"
checkexisting
  checkwhitespace
check-hyphen
"
`;

exports[`withLine() 3`] = `
"
checkexisting
  checkwhitespace
check-hyphen
"
`;

exports[`withLine() 4`] = `
"
checkexisting
  checkwhitespace
check-hyphen

checkmissing
"
`;
